# aenyrathia

./: .dockerignore  .envrc  .gitignore  .justfile  AGENTS.md  Cargo.toml  Dockerfile  Justfile  README.md  TODO.md  clippy.toml  docker-compose.yml  flake.nix  home.md
.github/workflows/: build-and-push.yml
.sqlx/: query-261c2bb2c1a4741a9cf174f11f65766347c438e056dd5e331dc2e6748a21c32e.json  query-930b56369faf1b74a7d7034d16beb878b61a8e938d5534abadc4543d50affce4.json
docs/: CONTRIBUTING.md  TODO.md
docs/writings/plans/: character-sheet.md  characters.md
docs/writings/plans/sessions/: session-0.md  session-1.md
migrations/: 1_user.sql
nix/: package.nix  shell.nix
ops/: Dockerfile
ops/vps/: README.md  aenyrathia.env.example  aenyrathia.service  bootstrap.sh  deploy.sh  nginx.aenyrathia.conf
philosophy-or-design/: how?.md  what?.md
rule-systems/: dnd-5e.md
src/: filters.rs  formatting.rs  git.rs  handlers.rs  lib.rs  main.rs  router.rs  settings.rs  wiki.rs
src/app/: settings.rs  state.rs
src/cli/: mod.rs  render.rs  roll.rs  scan.rs  serve.rs
src/domain/: filetree.rs  markdown.rs  mod.rs
src/routes/: auth.rs  mod.rs  wiki.rs
src/utils/: roll.py
static/: style.css
templates/: article.html  base.html  editor.html  login.html  register.html
tests/: auth_flow.rs
utils/: format-md.py  roll.py
wiki/: index.md  rule-system.md  session-0.md  timeline.md
wiki/campaigns/the-watch/: session-0.md  session-1.md
wiki/characters/: ampere.md  arma.md  jonathan-clearwater.md  mayari-atum.md  thruggsahmigul.md  zel'eon.md
wiki/story-so-far/one-shots/: the-three-researchers.md
writings/: home.md
writings/archive/: calendar.md
writings/archive/characters/: artillery.md
writings/notes/plans/: campaign.md  cities.md  gods.md  history.md  naming.md  pre-campaign-meeting.md  session-structure.md  superheros.md  themes.md  timeline.md
writings/notes/rule-systems/: pinbreak.md
writings/philosophy-or-design/: how?.md  what?.md
writings/plans/: campaign-structure.md  magic.md  one-shots.md  pre-campaign-meeting.md  random.md  session-structure.md
writings/rule-systems/: dnd-5e.md
writings/wiki/communities/cities/: ilrinia.md
