[package]
name = "pinbreak"
version = "0.1.0-alpha"
description = "CLI tool to roll dice and render markdown files (for now)"
edition = "2024"
readme = "docs/README.md"
repository = "https://github.com/rrvsh/pinbreak"
license = "MIT"
keywords = ["cli"]
categories = ["command-line-utilities"]

[dependencies]
askama = "0.14.0"
axum = "0.8.7"
clap = { version = "4.5.53", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.29"
markdown = "1.0.0"
rand = "0.9.2"
tokio = { version = "1.48.0", features = ["full"] }

[lints.clippy]
correctness = "deny"
suspicious = "deny"
complexity = "deny"
perf = "deny"
style = "deny"
pedantic = "deny"
cargo = "deny"
nursery = "deny"
