[package]
name = "aenyrathia"
version = "0.1.0-alpha"
description = "Browsable/editable git-backed wiki"
readme = "README.md"
repository = "https://github.com/rrvsh/aenyrathia"
edition = "2024"
license = "MIT"
keywords = ["web"]
categories = ["wiki-site"]

[dependencies]
askama = "0.14.0"
axum = "0.8.7"
env_logger = "0.11.8"
git2 = { version = "0.20.3", features = ["https", "ssh"] }
log = "0.4.29"
markdown = "1.0.0"
serde = { version = "1.0.228", features = ["derive"] }
tempfile = "3.24.0"
tokio = { version = "1.48.0", features = ["full"] }
tower-cookies = "0.11.0"
tower-http = { version = "0.6.8", features = ["normalize-path", "timeout"] }

[lints.clippy]
correctness = "deny"
suspicious = "deny"
complexity = "deny"
perf = "deny"
style = "deny"
pedantic = "deny"
cargo = "deny"
nursery = "deny"
